--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Jidan Zhong
 
 # Short bio or description (displayed in the header)
-description: HAHA
+description: YES!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/pestoo0221/jekyll-now/master/images/profile1.jpg
 
 #
 # Flags below are optional
@@ -21,12 +21,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: pestoo0221
   instagram:
-  linkedin:
+  linkedin:https://www.linkedin.com/in/jidan-zhong-33203635
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
