--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: pestoo0221
   instagram:
-  linkedin: https://www.linkedin.com/in/jidan-zhong-33203635
+  linkedin: jidan-zhong-33203635
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
