--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jidan Zhong
 
 # Short bio or description (displayed in the header)
-description: PhD
+description: PhD, Computational Neuroscientist ★ BioMedical Engineer ► Bioimaging ● Brain Research ● Data science ★ Yoga Enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/pestoo0221/jekyll-now/master/images/profile2n.jpg
