--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Jidan Zhong
 description: PhD, Computational Neuroscientist ★ BioMedical Engineer ► Bioimaging ● Brain Research ● Data science ★ Yoga Enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: {{ site.baseurl }}/images/profile2n.jpg
+# avatar: /images/profile2n.jpg
 #
 # Flags below are optional
 #
