change linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   flickr:
   github: pestoo0221
   instagram:
-  linkedin: jidan-zhong-33203635
+  linkedin: jidan-zhong-phd-33203635
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
